--- a/fr/html/guide/gui/gui-toolsbar.html
+++ b/fr/html/guide/gui/gui-toolsbar.html
@@ -74,7 +74,7 @@
               <a href="../../libs/base/text.html"><img class=inbullet src="../../../../img-guide/tooltext.png" alt="#########" border="1"></a>
             </td>
             <td>
-              <strong>Outil Text&nbsp;:</strong> <b class="tkeybd">Ctrl-4</b> Cet outil permet de placer du texte sur les dessins et de modifier les labels des composants.Plus d'information sur le lien <a href="../../libs/base/text.html">text</a> de la librairie <b class="property">base</b>
+              <strong>Outil Texte&nbsp;:</strong> <b class="tkeybd">Ctrl-4</b> Cet outil permet de placer du texte sur les dessins et de modifier les labels des composants.Plus d'information sur le lien <a href="../../libs/base/text.html">text</a> de la librairie <b class="property">base</b>
             </td>
           </tr>
           <tr>
@@ -134,7 +134,7 @@
               <img class=inbullet src="../../../../img-guide/tooltext.png" alt="#########" border="1">
             </td>
             <td>
-              <strong>Outil Text&nbsp;:</strong> Insert ou édite un text.
+              <strong>Outil Texte&nbsp;:</strong> Insert ou édite un text.
             </td>
           </tr>
           <tr>
