--- a/fr/html/guide/subcirc/sub-personalise.html
+++ b/fr/html/guide/subcirc/sub-personalise.html
@@ -82,7 +82,7 @@
               <img class=inbullet src="../../../../img-guide/tooltext.png" alt="#########" border="1">
             </td>
             <td>
-              <strong>Outil Text&nbsp;: </strong> Insert ou édite un text.
+              <strong>Outil Texte&nbsp;: </strong> Insert ou édite un text.
             </td>
           </tr>
           <tr>
