--- a/fr/html/libs/arith/fpcomparator.html
+++ b/fr/html/libs/arith/fpcomparator.html
@@ -116,7 +116,7 @@
         None.
       </p>
       <h2>
-        Comportement de l'outil text
+        Comportement de l'outil texte
       </h2>
       <p>
         None.
