--- a/fr/html/libs/arith/fpfptoint.html
+++ b/fr/html/libs/arith/fpfptoint.html
@@ -104,7 +104,7 @@
         None.
       </p>
       <h2>
-        Comportement de l'outil text
+        Comportement de l'outil texte
       </h2>
       <p>
         None.
