--- a/fr/html/libs/base/index.html
+++ b/fr/html/libs/base/index.html
@@ -51,7 +51,7 @@
               <a href="text.html"><img class="iconlibs" src="../../../../icons/6464/tooltext.png" width="32" height="32" border="0" alt="#########"></a>
             </td>
             <td>
-              <a href="text.html">Outil Text</a>
+              <a href="text.html">Outil Texte</a>
             </td>
           </tr>
         </tbody>
