--- a/fr/html/libs/gates/basic.html
+++ b/fr/html/libs/gates/basic.html
@@ -511,7 +511,7 @@
         Aucun.
       </p>
       <h2>
-        Comportement de l'outil text
+        Comportement de l'outil texte
       </h2>
       <p>
         Permets de modifier l'étiquette associée à la porte.
