--- a/fr/html/libs/gates/pla.html
+++ b/fr/html/libs/gates/pla.html
@@ -7,14 +7,14 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Language" content="fr">
     <title>
-      Réseau logique programmable  
+      Réseau logique programmable
     </title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
   </head>
   <body>
     <div class="maindiv">
       <h1>
-        <img class="iconlibs" src="../../../../icons/6464/pla0.png" alt="#########" border=0 height="32" width="32"> <em>Réseau logique programmable</em>
+        <img class="iconlibs" src="../../../../icons/6464/pla0.png" alt="#########" border="0" height="32" width="32"> <em>Réseau logique programmable</em>
       </h1>
       <table>
         <tbody>
@@ -48,78 +48,80 @@
         Comportement
       </h2>
       <p>
-	    Le <b>Réseau logique programmable</b> (PLA) va présenter sur sa sortie le résultat d'une fonction logique combinatoir. Si une des entrées est en erreur (<b class="evalue">E</b>) ou indéfini (<b class="uvalue">U</b>) il considérera que toutes ses entrées sont à <b class="unov">1</b>. Ce composant resemble a une ROM et vous devez entrez la programation de manière très similaire. Il est possible d'exporter et d'importer la programation à partir d'un fichier.<br>  
-
-		Il existe dans la <b class="property">libririe Entrée/Sortie (extra)</b> un composant PLA qui représente mieux le fonctionnement interne de ceux-ci.  
+        Le <b>Réseau logique programmable</b> (PLA) va présenter sur sa sortie le résultat d'une fonction logique combinatoir. Si une des entrées est en erreur (<b class="evalue">E</b>) ou indéfini (<b class="uvalue">U</b>) il considérera que toutes ses entrées sont à <b class="unov">1</b>. Ce composant resemble a une ROM et vous devez entrez la programation de manière très similaire. Il est possible d'exporter et d'importer la programation à partir d'un fichier.<br>
+        Il existe dans la <b class="property">libririe Entrée/Sortie (extra)</b> un composant PLA qui représente mieux le fonctionnement interne de ceux-ci.
       </p>
-	  <p>
-	     Après avoir définis le nombre de lignes en entrée avec l'attribut <b class="property">Largeur de donnée en entrée</b> et le nombre de lignes en sortie avec l'attribut <b class="property">Largeur de donnée en sortie</b> vous pouvez ouvrir cette fenètre en effectuant un clic droit sur le PLA pour ouvrir le menu contextuel et sélectionnez le menu <b class="menu">|&nbsp;Modifier le programme PLA&nbsp;|</b>.
-		<p>
-	    <img class="notscal" src="../../../img-libs/plaeditor.png" alt="#########"><br>
-		</p>
-	  </p>
-	  <p>
-	    Cliquez sur le bouton <b class="button">&nbsp;Ajouter&nbsp;</b> ligne cela créera la première ligne de votre programme. Vous pouvez deja ajouter d'autres ligne ou le faire au fur et à mesure de l'écriture.<br>
-		Le bouton <b class="button">&nbsp;Supprimer&nbsp;</b> permet d'effacer la ligne. Vous observez les colonnes de bouton pour programmer les entrées et les colonnes de boutons pour programmer les sorties. Si vous cliquez dessus ils afficherons alternativement 0,1,x. 0 et 1 représente le niveau logique et x signifie sans importance.</p><p>
-		Par exemple dans la première ligne de la figure ci-dessus vous voyer la combinaison 0.x.x pour les entrées et 0.0.0 pour les sorties. Cela signifie que si l'entree 2 est à 0 les entrées 1 et 0 n'ont pas d'importance et on délivrera sur les sorties la valeur 0.0.0<br> La colonne commentaire permet de rajouter un texte qui sera visible sur le PLA quand la combinaison de la ligne est active.
-	  </p>
-	  <p>
-	    Les boutons <b class="button">&nbsp;Exporter&nbsp;</b> et <b class="button">&nbsp;Importer&nbsp;</b> pemetent respectivement d'exporter le programme ou de l'importer depuis un fichier.<br> 
-		Le bouton <b class="button">&nbsp;OK&nbsp;</b> confirme l'enregistrement du programme et ferme la fenêtre.<br>
-		Le bouton <b class="button">&nbsp;Annuler&nbsp;</b> oublie le programme et ferme la fenêtre.<br>
-	  </p>
-	  <h2>
+      <p>
+        Après avoir définis le nombre de lignes en entrée avec l'attribut <b class="property">Largeur de donnée en entrée</b> et le nombre de lignes en sortie avec l'attribut <b class="property">Largeur de donnée en sortie</b> vous pouvez ouvrir cette fenètre en effectuant un clic droit sur le PLA pour ouvrir le menu contextuel et sélectionnez le menu <b class="menu">|&nbsp;Modifier le programme PLA&nbsp;|</b>.
+      </p>
+      <p>
+        <img class="notscal" src="../../../img-libs/plaeditor.png" alt="#########"><br>
+      </p>
+      <p>
+        Cliquez sur le bouton <b class="button">&nbsp;Ajouter&nbsp;</b> ligne cela créera la première ligne de votre programme. Vous pouvez deja ajouter d'autres ligne ou le faire au fur et à mesure de l'écriture.<br>
+        Le bouton <b class="button">&nbsp;Supprimer&nbsp;</b> permet d'effacer la ligne. Vous observez les colonnes de bouton pour programmer les entrées et les colonnes de boutons pour programmer les sorties. Si vous cliquez dessus ils afficherons alternativement 0,1,x. 0 et 1 représente le niveau logique et x signifie sans importance.
+      </p>
+      <p>
+        Par exemple dans la première ligne de la figure ci-dessus vous voyer la combinaison 0.x.x pour les entrées et 0.0.0 pour les sorties. Cela signifie que si l'entree 2 est à 0 les entrées 1 et 0 n'ont pas d'importance et on délivrera sur les sorties la valeur 0.0.0<br>
+        La colonne commentaire permet de rajouter un texte qui sera visible sur le PLA quand la combinaison de la ligne est active.
+      </p>
+      <p>
+        Les boutons <b class="button">&nbsp;Exporter&nbsp;</b> et <b class="button">&nbsp;Importer&nbsp;</b> pemetent respectivement d'exporter le programme ou de l'importer depuis un fichier.<br>
+        Le bouton <b class="button">&nbsp;OK&nbsp;</b> confirme l'enregistrement du programme et ferme la fenêtre.<br>
+        Le bouton <b class="button">&nbsp;Annuler&nbsp;</b> oublie le programme et ferme la fenêtre.<br>
+      </p>
+      <h2>
         Broches (en supposant que le composant est orienté vers l'est)
       </h2>
-	  <div class="attliste">
-      <dl>
-	   <dt class="lib">
-           Bord ouest&nbsp;:
-        </dt>
-        <dd>
-		  Entrée des donnée du composant, sa largeur en bit est définie par l'attribut <b class="property">Largeur de donnée en entrée</b>. 
-		</dd>
-		<dt class="lib">
-          Bord est&nbsp;:
-        </dt>
-        <dd>
-		  Sortie des résultat de traitement, sa largeur en bit est définie par l'attribut <b class="property">Largeur de donnée en sortie</b>. 
-		</dd>
-	  </dl>
-	  </div>
+      <div class="attliste">
+        <dl>
+          <dt class="lib">
+            Bord ouest&nbsp;:
+          </dt>
+          <dd>
+            Entrée des donnée du composant, sa largeur en bit est définie par l'attribut <b class="property">Largeur de donnée en entrée</b>.
+          </dd>
+          <dt class="lib">
+            Bord est&nbsp;:
+          </dt>
+          <dd>
+            Sortie des résultat de traitement, sa largeur en bit est définie par l'attribut <b class="property">Largeur de donnée en sortie</b>.
+          </dd>
+        </dl>
+      </div>
       <h2>
         Attributs
       </h2>
       <p>
-	     Lorsque le composant est sélectionné ou en cours d'ajout, les touches <b class="tkeybd">fléchées</b> modifient son attribut <b class="property">Orientation</b>.
+        Lorsque le composant est sélectionné ou en cours d'ajout, les touches <b class="tkeybd">fléchées</b> modifient son attribut <b class="property">Orientation</b>.
       </p>
-	  <div class="attliste">
-	  <dl>
-         <dt class="lib">
-          Orientation
-        </dt>
-        <dd>
-          La direction du composant, sa sortie par rapport à son entrée.
-        </dd>
-		<dt class="lib">
-          Largeur de donnée en entrée
-        </dt>
-        <dd>
-          La largeur de donnée en bit de l'entrée.
-        </dd>
-		<dt class="lib">
-          Largeur de donnée en sortie
-        </dt>
-        <dd>  
-		  La largeur de donnée en bit de la sortie.
-        </dd>
-		<dt class="lib">
-          Program
-        </dt>
-        <dd>
-		  Ouvre le fenètre de programation du contenu.
-        </dd>
-		<dt class="lib">
+      <div class="attliste">
+        <dl>
+          <dt class="lib">
+            Orientation
+          </dt>
+          <dd>
+            La direction du composant, sa sortie par rapport à son entrée.
+          </dd>
+          <dt class="lib">
+            Largeur de donnée en entrée
+          </dt>
+          <dd>
+            La largeur de donnée en bit de l'entrée.
+          </dd>
+          <dt class="lib">
+            Largeur de donnée en sortie
+          </dt>
+          <dd>
+            La largeur de donnée en bit de la sortie.
+          </dd>
+          <dt class="lib">
+            Program
+          </dt>
+          <dd>
+            Ouvre le fenètre de programation du contenu.
+          </dd>
+          <dt class="lib">
             Étiquette
           </dt>
           <dd>
@@ -131,19 +133,19 @@
           <dd>
             La police avec laquelle l'étiquette doit être rendue.
           </dd>
-	  </dl>
+        </dl>
       </div>
       <h2>
-        Comportement de l'outil pousser 
+        Comportement de l'outil pousser
       </h2>
       <p>
         Aucun.
       </p>
       <h2>
-        Comportement de l'outil text 
+        Comportement de l'outil texte
       </h2>
       <p>
-	    Permets de modifier l'étiquette associée au composant.
+        Permets de modifier l'étiquette associée au composant.
       </p>
       <p>
         <b>Retour à</b> <a href="../index.html#hlibgates">Référence de la bibliothèque</a>
