--- a/fr/html/libs/io/button.html
+++ b/fr/html/libs/io/button.html
@@ -121,7 +121,7 @@
         Lorsque le bouton de la souris est enfoncé, la sortie du composant est ajustée en fonction de la propriété <b class="property">Niveau logique</b>.
       </p>
       <h2>
-        Comportement de l'outil text 
+        Comportement de l'outil texte 
       </h2>
       <p>
         Permet de modifier l'étiquette associée au composant.
