--- a/fr/html/libs/io/joystick.html
+++ b/fr/html/libs/io/joystick.html
@@ -110,7 +110,7 @@
         En maintenant enfoncer le <b class="tkeybd">bouton gauche</b> de la souris dans la zone de la manette, le bouton de celle-ci va suivre le curseur de la souris et les sorties sont mises à jour au fur et à  mesure des déplacements. En relâchant le bouton de la souris, le bouton de la manette retourne à sa position de repos.
       </p>
       <h2>
-        Comportement de l'outil text 
+        Comportement de l'outil texte 
       </h2>
       <p>
         Aucun.
