--- a/fr/html/libs/io/keyboard.html
+++ b/fr/html/libs/io/keyboard.html
@@ -48,7 +48,7 @@
         Comportement
       </h2>
       <p>
-        Ce composant permet au circuit de lire les touches tapées sur le clavier à condition que les touches soient représentables dans le code ASCII 7 bits. Après avoir cliqué sur le composant à l'aide de l'outil pousser, l'utilisateur peut taper des caractères qui s'accumulent dans une mémoire tampon. À tout moment, la valeur ASCII du caractère le plus à gauche dans la mémoire tampon est envoyée à la sortie <var>Données</var>. Lorsque l'entrée d'horloge est déclenchée, le caractère le plus à gauche disparaît de la mémoire tampon et le nouveau caractère le plus à gauche est envoyé sur la sortie <var>Données</var>.
+        Ce composant permet au circuit de lire les touches tapées sur le clavier à condition que les touches soient représentables dans le code ASCII 7 bits. Après avoir cliqué sur le composant à l'aide de l'outil pousser(<img class="icontxt" src="../../../icons/1616/toolpoke.png" alt="#########">), l'utilisateur peut taper des caractères qui s'accumulent dans une mémoire tampon. À tout moment, la valeur ASCII du caractère le plus à gauche dans la mémoire tampon est envoyée à la sortie <var>Données</var>. Lorsque l'entrée d'horloge est déclenchée, le caractère le plus à gauche disparaît de la mémoire tampon et le nouveau caractère le plus à gauche est envoyé sur la sortie <var>Données</var>.
       </p>
       <p>
         Les caractères pris en charge pour la mémoire tampon comprennent tous les caractères ASCII imprimables, ainsi que l'espace, le retour à la ligne, l'espacement arrière et le contrôle L. En outre, les touches flèche gauche et flèche droite permettent de déplacer le curseur dans la mémoire tampon, et la touche effacer supprime le caractère à droite du curseur (s'il y en a un).
@@ -121,7 +121,7 @@
       Chaque caractère tapé est alors inséré dans la mémoire tampon, à condition que celle-ci n'ait pas atteint sa capacité et que le caractère soit l'un de ceux pris en charge par le composant : les caractères imprimables du code ASCII à 7 bits, ainsi que l'espace, l'espacement arrière, le retour à la ligne et le contrôle L. En outre, l'utilisateur peut taper les touches flèche gauche et flèche droite pour modifier l'emplacement du curseur dans la mémoire tampon, et il peut taper la touche effacer pour supprimer le caractère de la mémoire tampon (s'il y en a un) juste à droite du curseur.
     </p>
     <h2>
-      Comportement de l'outil text 
+      Comportement de l'outil texte 
     </h2>
     <p>
       Permet de modifier l'étiquette associée au composant.
