--- a/fr/html/libs/io/portio.html
+++ b/fr/html/libs/io/portio.html
@@ -58,7 +58,7 @@
             <dd>
 			Le composant se comporte comme une broche d'entrée multibit dans le schéma du circuit.<br>
 			<img class="notscal" src="../../../../img-libs/portioin.png" alt="#########"><br>
-			Il est possible de cliquer avec l'outil pousser sur les broches de l'image du connecteur pour en changer l'état. Celles-ci passeront alternativement de l'état <b class="zerov">0</b> a <b class="unov">1</b> puis indéfini (gris). Ce changement est illustré pas la couleur du carré représentant la broche. Le bus de sortie reflétera ce changement sur ses lignes.
+			Il est possible de cliquer avec l'outil pousser(<img class="icontxt" src="../../../icons/1616/toolpoke.png" alt="#########">) sur les broches de l'image du connecteur pour en changer l'état. Celles-ci passeront alternativement de l'état <b class="zerov">0</b> a <b class="unov">1</b> puis indéfini (gris). Ce changement est illustré pas la couleur du carré représentant la broche. Le bus de sortie reflétera ce changement sur ses lignes.
 			</dd>
 			<dt class="lib">
               Sortie seulement
@@ -187,7 +187,7 @@
         Un <b class="tkeybd">clic gauche</b> sur un des carrés représentant un contacte du port modifie l'état de la sortie correspondante en conséquence.
       </p>
       <h2>
-        Comportement de l'outil text 
+        Comportement de l'outil texte 
       </h2>
       <p>
         Permets de modifier l'étiquette associée au composant.
