--- a/fr/html/libs/ioextra/exbuzzer.html
+++ b/fr/html/libs/ioextra/exbuzzer.html
@@ -31,7 +31,7 @@
               <strong>Introduction :</strong>
             </td>
             <td>
-              2.15 in Logisim ITA Component
+              2.15 dans Logisim ITA Component
             </td>
           </tr>
           <tr>
@@ -48,7 +48,7 @@
         Comportement
       </h2>
       <p>
-        Ce composant permet de générer un son sur les hautparleurs de votre système. Une des entrées définit la fréquence, une autre le volume et la dernière active ou désactiver le son. Il est possible de choisir la forme d'onde en paramétrant l'attribut <b class="property">Type de signal</b>.
+        Ce composant permet de générer un son sur les hautparleurs de votre système. Une des entrées définit la fréquence, une autre le volume et la dernière active ou désactiver le son. Il est possible de choisir la forme d'onde en paramétrant l'attribut <b class="property">Forme d'onde</b>.
       </p>
       <h2>
         Broches
@@ -84,6 +84,9 @@
       <h2>
         Attributs
       </h2>
+      <p>
+        Lorsque le composant est sélectionné ou en cours d'ajout, les <b class="tkeybd">touches fléchées</b> modifient son attribut <b class="property">Orientation</b>.
+      </p>
       <div class="attliste">
         <dl>
           <dt class="lib">
@@ -96,7 +99,7 @@
             Sélectionner l'emplacement
           </dt>
           <dd>
-            L'emplacement de la broche Rapport cyclique rapport aux autres broches.
+            L'emplacement de la broche Rapport cyclique par rapport aux autres broches.
           </dd>
           <dt class="lib">
             Fréquence
@@ -111,7 +114,7 @@
             La largeur de donnée en bit du bus de réglage du volume.
           </dd>
           <dt class="lib">
-            Etiquette
+            Étiquette
           </dt>
           <dd>
             Le texte de l'étiquette associée au composant.
@@ -132,7 +135,7 @@
             Canal
           </dt>
           <dd>
-            Permet la sélection des canaux de sortie, gauche, droite ou les deux.
+            Permets la sélection des canaux de sortie, gauche, droite ou les deux.
           </dd>
           <dt class="lib">
             Degré de lissage
@@ -155,10 +158,10 @@
         Aucun.
       </p>
       <h2>
-        Comportement de l'outil text
+        Comportement de l'outil texte
       </h2>
       <p>
-        Permet de modifier l'étiquette associée au composant.
+        Permets de modifier l'étiquette associée au composant.
       </p>
       <p>
         <b>Retour à</b> <a href="../index.html#hlibioextra">Référence de la bibliothèque</a>
