--- a/fr/html/libs/ioextra/exdigscop.html
+++ b/fr/html/libs/ioextra/exdigscop.html
@@ -118,7 +118,7 @@
         bla bla
       </p>
       <h2>
-        Comportement de l'outil text 
+        Comportement de l'outil texte 
       </h2>
       <p>
         bla bla
