--- a/fr/html/libs/ioextra/exslider.html
+++ b/fr/html/libs/ioextra/exslider.html
@@ -31,7 +31,7 @@
               <strong>Introduction :</strong>
             </td>
             <td>
-              2.15 in Logisim ITA Component
+              2.15 dans Logisim ITA Component
             </td>
           </tr>
           <tr>
@@ -69,6 +69,9 @@
       <h2>
         Attributs
       </h2>
+	  <p>
+	  Lorsque le composant est sélectionné ou ajouté, les touches fléchées modifient son attribut <b class="property">Orientation</b>.
+	  </p>
       <div class="attliste">
         <dl>
           <dt class="lib">
@@ -96,7 +99,7 @@
             La couleur du fond de la glissière.
           </dd>
           <dt class="lib">
-            Etiquette
+            Étiquette
           </dt>
           <dd>
             Le texte de l'étiquette associée au composant.
@@ -108,7 +111,7 @@
             La police de caractères avec laquelle l'étiquette doit être affichée.
           </dd>
           <dt class="lib">
-            Etiquette visible
+           Étiquettee visible
           </dt>
           <dd>
             Si l'étiquette est affichée ou pas.
@@ -128,7 +131,7 @@
         Un <b class="tkeybd">clic gauche</b> maintenu sur le curseur permet de le déplacer.
       </p>
       <h2>
-        Comportement de l'outil text
+        Comportement de l'outil texte
       </h2>
       <p>
         Permets de modifier l'étiquette associée au composant.
