--- a/fr/html/libs/mem/flipflops.html
+++ b/fr/html/libs/mem/flipflops.html
@@ -441,7 +441,7 @@
         Cliquer sur une bascule sur la valeur interne à l'aide de l'outil pousser(<img class="icontxt" src="../../../../icons/1616/toolpoke.png" alt="#########">) fait basculer le bit stocké dans la bascule, à moins que les entrées set/reset asynchrones n'imposent actuellement une valeur à la bascule.
       </p>
       <h2>
-        Comportement de l'outil text
+        Comportement de l'outil texte
       </h2>
       <p>
         Permets de modifier l'étiquette associée au composant.
