--- a/fr/html/libs/mem/ram.html
+++ b/fr/html/libs/mem/ram.html
@@ -466,7 +466,7 @@
             <b class="vprop">Bus bidirectionel</b>&nbsp;: Un bus est présent pour l'entrée et la sortie des données. Il faudra utiliser des buffers contrôlés pour gérer la circulation des données. <b class="vprop">Bus omnidirectionel</b>&nbsp;: Deux bus un en entré et un en sorti sont présent.
           </dd>
           <dt class="lib">
-            Etiquette
+            Étiquette
           </dt>
           <dd>
             Le texte de l'étiquette associée au composant.
@@ -478,7 +478,7 @@
             La police de caractères avec laquelle l'étiquette doit être affichée.
           </dd>
           <dt class="lib">
-            Etiquette visible
+           Étiquettee visible
           </dt>
           <dd>
             Si l'étiquette est visible ou non.
@@ -498,7 +498,7 @@
         Voire <a href="../../guide/mem/mem-poke.html">Editer la mémoire</a> dans le <em>Guide l'utilisateur</em>.
       </p>
       <h2>
-        Comportement de l'outil text
+        Comportement de l'outil texte
       </h2>
       <p>
         Permets de modifier l'étiquette associée au composant.
