--- a/fr/html/libs/mem/register.html
+++ b/fr/html/libs/mem/register.html
@@ -131,7 +131,7 @@
 		   Configure la façon dont l'entrée d'horloge est interprétée. Les valeurs&nbsp;:<br><b class="vprop">Front montant</b> indique que le composant doit mettre à jour sa valeur à l'instant où l'horloge passe de <b class="zerov">0</b> à <b class="unov">1</b>. <br><b class="vprop">Front descendant</b> indique qu'il doit mettre à jour sa valeur à l'instant où l'horloge passe de <b class="unov">1</b> à <b class="zerov">0</b>. <br><b class="vprop">Niveau haut</b> indique que la bascule doit mettre à jour en continu lorsque l'entrée d'horloge est à <b class="unov">1</b>.<br><b class="vprop">Niveau bas</b> indique qu'elle doit mettre à jour en continu lorsque l'entrée d'horloge est à <b class="zerov">0</b>.
           </dd>
           <dt class="lib">
-            Etiquette
+            Étiquette
           </dt>
           <dd>
             Le texte de l'étiquette associée au composant.
@@ -151,7 +151,7 @@
         En cliquant sur le compteur, le clavier se concentre sur le composant (indiqué par un rectange rouge) et la saisie de chiffres hexadécimaux modifie la valeur stockée dans le régisre.
       </p>
       <h2>
-        Comportement de l'outil text
+        Comportement de l'outil texte
       </h2>
       <p>
         Permets de modifier l'étiquette associée au composant. 
