--- a/fr/html/libs/mem/shiftreg.html
+++ b/fr/html/libs/mem/shiftreg.html
@@ -158,7 +158,7 @@
             Configure la façon dont l'entrée d'horloge est interprétée. La valeur <b class="vprop">Front montant</b> indique que le composant doit mettre à jour sa valeur à l'instant où l'horloge passe de <b class="zerov">0</b> à <b class="unov">1</b>. La valeur <b class="vprop">Front descendant</b> indique qu'il doit mettre à jour sa valeur à l'instant où l'horloge passe de <b class="unov">1</b> à <b class="zerov">0</b>.
           </dd>
           <dt class="lib">
-            Etiquette
+            Étiquette
           </dt>
           <dd>
             Le texte de l'étiquette associée au composant.
@@ -179,7 +179,7 @@
         Si la propriété <b class="property">Apparence</b> est positionnée sur <b class="vprop">Logisim-classique</b> alors il est nécessaire que la propriété <b class="property">Chargement parallèle</b> soit activée.
       </p>
       <h2>
-        Comportement de l'outil text
+        Comportement de l'outil texte
       </h2>
       <p>
         Permets de modifier l'étiquette associée au composant.
