--- a/fr/html/libs/wiring/clock.html
+++ b/fr/html/libs/wiring/clock.html
@@ -72,7 +72,7 @@
         Attributs
       </h2>
       <p>
-        Lorsque le composant est sélectionné ou ajouté, les touches fléchées modifient son attribut <b class="property">Orientation</b>.
+        Lorsque le composant est sélectionné ou ajouté, les <b class="tkeybd">touches fléchées</b> modifient son attribut <b class="property">Orientation</b>.
       </p>
 	  <div class="attliste">
       <dl>
@@ -104,7 +104,7 @@
 		  </center>
         </dd>
 		<dt class="lib">
-           Etiquette
+           Étiquette
         </dt>
 		 <dd>
           Le texte de l'étiquette associée à la porte.
@@ -130,7 +130,7 @@
         En cliquant sur un composant d'horloge, vous faite avancer l'ensemble des horloges de un tic.
       </p>
       <h2>
-        Comportement de l'outil text
+        Comportement de l'outil textee
       </h2>
       <p>
         Permets de modifier l'étiquette associée au composant.
