--- a/fr/html/libs/wiring/notconnect.html
+++ b/fr/html/libs/wiring/notconnect.html
@@ -79,7 +79,7 @@
         Aucun.
       </p>
       <h2>
-        Comportement de l'outil text
+        Comportement de l'outil texte
       </h2>
       <p>
         Aucun.
