--- a/fr/html/libs/wiring/pin.html
+++ b/fr/html/libs/wiring/pin.html
@@ -210,7 +210,7 @@
           Si, toutefois, l’utilisateur visualise l’état d’un sous-circuit comme décrit dans le <a href="../../guide/subcirc/sub-debug.html">débogage de Sous-circuits</a> du <em>Guide de l'utilisateur</em> , alors la valeur de la broche est pilotée par la valeur que le sous-circuit reçoit du circuit de hiérarchie supérieur. L'utilisateur ne peut pas modifier la valeur sans rompre ce lien entre l'état du sous-circuit et l'état du circuit contenant, et Logisim demandera à l'utilisateur de vérifier que la rupture de ce lien est réellement souhaitée.
         </p>
         <h2>
-          Comportement de l'outil text
+          Comportement de l'outil texte
         </h2>
       </div>
       <p>
