--- a/docstatus.html
+++ b/docstatus.html
@@ -7,6 +7,7 @@
     <meta name="changed" content="2023-08-156T12:25:12.000000000">
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Language" content="fr">
+	<meta name="robots" content="noindex">
     <title>
       Bienvenue dans Logisim-evolution!
     </title>
