--- a/fr/html/libs/arith/adder.html
+++ b/fr/html/libs/arith/adder.html
@@ -114,7 +114,7 @@
         Aucun.
       </p>
       <h2>
-        Comportement de l'outil text
+        Comportement de l'outil texte
       </h2>
       <p>
         Aucun.
