--- a/fr/html/libs/arith/comparator.html
+++ b/fr/html/libs/arith/comparator.html
@@ -113,7 +113,7 @@
         Aucun.
       </p>
       <h2>
-        Comportement de l'outil text
+        Comportement de l'outil texte
       </h2>
       <p>
         Aucun.
