--- a/fr/html/libs/arith/fpnegator.html
+++ b/fr/html/libs/arith/fpnegator.html
@@ -98,7 +98,7 @@
         Aucun.
       </p>
       <h2>
-        Comportement de l'outil text
+        Comportement de l'outil texte
       </h2>
       <p>
         Aucun.
