--- a/fr/html/libs/base/text.html
+++ b/fr/html/libs/base/text.html
@@ -7,14 +7,14 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <meta http-equiv="Content-Language" content="fr">
     <title>
-      Outil Text
+      Outil Texte
     </title>
     <link rel="stylesheet" type="text/css" href="../../style.css">
   </head>
   <body>
     <div class="maindiv">
       <h1>
-        <img class="iconlibs" src="../../../../icons/6464/tooltext.png" alt="#########" width="32" height="32"> <em>Outil Text</em>
+        <img class="iconlibs" src="../../../../icons/6464/tooltext.png" alt="#########" width="32" height="32"> <em>Outil Texte</em>
       </h1>
       <table>
         <tbody>
