--- a/fr/html/libs/gates/not.html
+++ b/fr/html/libs/gates/not.html
@@ -215,7 +215,7 @@
         Aucun.
       </p>
       <h2>
-        Comportement de l'outil text
+        Comportement de l'outil texte
       </h2>
       <p>
         Permets de modifier l'étiquette associée à la porte.
