--- a/fr/html/libs/io/7seg.html
+++ b/fr/html/libs/io/7seg.html
@@ -126,7 +126,7 @@
       Aucun.
     </p>
     <h2>
-      Comportement de l'outil text
+      Comportement de l'outil texte
     </h2>
     <p>
       Permet de modifier l'étiquette associée au composant.
