--- a/fr/html/libs/io/dipswitch.html
+++ b/fr/html/libs/io/dipswitch.html
@@ -112,10 +112,10 @@
         Comportement de l'outil pousser
       </h2>
       <p>
-        lorsque l'on appuie sur l'un des commutateurs à l'aide de l'outil pousser, les commutateurs de sortie basculent de <b class="zerov">0</b> à <b class="unov">1</b> ou de <b class="unov">1</b> à <b class="zerov">0</b>.
+        lorsque l'on appuie sur l'un des commutateurs à l'aide de l'outil pousser(<img class="icontxt" src="../../../icons/1616/toolpoke.png" alt="#########">), les commutateurs de sortie basculent de <b class="zerov">0</b> à <b class="unov">1</b> ou de <b class="unov">1</b> à <b class="zerov">0</b>.
       </p>
       <h2>
-        Comportement de l'outil text 
+        Comportement de l'outil texte 
       </h2>
       <p>
         Permet de modifier l'étiquette associée au composant.
