--- a/fr/html/libs/io/rgbled.html
+++ b/fr/html/libs/io/rgbled.html
@@ -114,7 +114,7 @@
           Aucun.
         </p>
         <h2>
-          Comportement de l'outil text 
+          Comportement de l'outil texte 
         </h2>
         <p>
           Permet de modifier l'étiquette associée au composant.
