--- a/fr/html/libs/mem/counter.html
+++ b/fr/html/libs/mem/counter.html
@@ -305,7 +305,7 @@
             Configure la façon dont l'entrée d'horloge est interprétée. Les valeurs&nbsp;:<br><b class="vprop">Front montant</b> indique que le composant doit mettre à jour sa valeur à l'instant où l'horloge passe de <b class="zerov">0</b> à <b class="unov">1</b>. <br><b class="vprop">Front descendant</b> indique qu'il doit mettre à jour sa valeur à l'instant où l'horloge passe de <b class="unov">1</b> à <b class="zerov">0</b>.
           </dd>
           <dt class="lib">
-            Etiquette
+            Étiquette
           </dt>
           <dd>
             Le texte de l'étiquette associée au composant.
@@ -337,7 +337,7 @@
         En cliquant sur le compteur, le clavier se concentre sur le composant (indiqué par un carré rouge) et la saisie de chiffres hexadécimaux modifie la valeur stockée dans le compteur.
       </p>
       <h2>
-        Comportement de l'outil text
+        Comportement de l'outil texte
       </h2>
       <p>
         Permets de modifier l'étiquette associée au composant.
