--- a/fr/html/libs/mem/rom.html
+++ b/fr/html/libs/mem/rom.html
@@ -143,7 +143,7 @@
       
       </p>
       <h2>
-        Comportement de l'outil text
+        Comportement de l'outil texte
       </h2>
       <p>
         Permets de modifier l'étiquette associée au composant.
