--- a/fr/html/libs/wiring/extender.html
+++ b/fr/html/libs/wiring/extender.html
@@ -122,7 +122,7 @@
         Aucun.
       </p>
       <h2>
-        Comportement de l'outil text
+        Comportement de l'outil texte
       </h2>
       <p>
         Aucun.
