--- a/fr/html/libs/wiring/probe.html
+++ b/fr/html/libs/wiring/probe.html
@@ -150,7 +150,7 @@
         Aucun.
       </p>
       <h2>
-        Comportement de l'outil text
+        Comportement de l'outil texte
       </h2>
       <p>
         Permets de modifier l’étiquette associée au composant.
