--- a/fr/html/libs/wiring/transist.html
+++ b/fr/html/libs/wiring/transist.html
@@ -603,7 +603,7 @@
         Aucun.
       </p>
       <h2>
-        Comportement de l'outil text
+        Comportement de l'outil texte
       </h2>
       <p>
         Aucun.
